[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/dialog_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/themes/global.tres" type="Theme" id=2]
[ext_resource path="res://scenes/ui/level_intro_dialog.gd" type="Script" id=3]

[node name="LevelIntro" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="DialogBackground" parent="." instance=ExtResource( 1 )]
self_modulate = Color( 0, 0, 0, 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.454902, 0.298039, 0.160784, 1 )
polygon = PoolVector2Array( 67, 140, 101, 311, 418, 293, 437, 131 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -27.0
margin_bottom = 27.0
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 21.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="InstructionsLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_right = 412.0
margin_bottom = 21.0
custom_colors/default_color = Color( 0.945098, 1, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Intro text goes here![/center]"
text = "Intro text goes here!"
fit_content_height = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 512.0
margin_bottom = 78.0

[node name="PlayBtn" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 217.0
margin_right = 295.0
margin_bottom = 37.0
text = "Play!"

[connection signal="pressed" from="VBoxContainer/CenterContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
